DOP-6502: fix alignment issue (#17178)

--- a/platform/docs-nextjs/src/components/templates/document.module.scss
+++ b/platform/docs-nextjs/src/components/templates/document.module.scss
@@ -4,9 +4,7 @@ $max-on-this-page-width: 200px;
 $max-content-width: 775px;
 $max-content-width-large-screen: 884px;
 $max-content-value: calc(($max-content-width + theme.$size-xlarge * 2) + ($max-on-this-page-width + 5px + theme.$size-medium ));
-$max-content-value-large-screen: (
-  $max-content-width-large-screen + theme.$size-xlarge * 2) + ($max-on-this-page-width + 5px + theme.$size-medium
-);
+$max-content-value-large-screen: calc(($max-content-width-large-screen + theme.$size-xlarge * 2) + ($max-on-this-page-width + 5px + theme.$size-medium));
 
 .document {
   display: grid;
@@ -17,8 +15,8 @@ $max-content-value-large-screen: (
   max-width: $max-content-value;
 
   @media not all and (max-width: 1920px) {
-    grid-template-columns: minmax(0, calc(var(--max-content-value-large-screen) + theme.$size-xlarge * 2)) 1fr;
-    max-width: var(--max-content-value-large-screen);
+    grid-template-columns: minmax(0, calc($max-content-width-large-screen + theme.$size-xlarge * 2)) 1fr;
+    max-width: $max-content-value-large-screen;
   }
 }
 
