--- a/platform/docs-nextjs/src/components/templates/main-column.module.scss
+++ b/platform/docs-nextjs/src/components/templates/main-column.module.scss
@@ -3,7 +3,6 @@ $main-column-horizontal-margin: $size-xlarge;
 
 .main-column {
   margin: $size-default $main-column-horizontal-margin $size-xlarge;
-  max-width: 800px;
   min-height: 600px;
 
   @media #{screenSize-upToLarge} {
